Fix logo not centered in prod
See https://stackoverflow.com/questions/66763196/gatsby-image-plugin-staticimage-cannot-override-the-default-wrapper-style-gats

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -108,14 +108,14 @@
 .logo {
     height: auto;
     width: 100px;
-    vertical-align: middle;
+    vertical-align: middle !important;
     margin-right: 0.3em;
 }
 
 .logo-navbar {
     height: auto;
     width: 50px;
-    vertical-align: middle;
+    vertical-align: middle !important;
     margin-right: 0.3em;
 }
 
